# OnePanel-CI

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  build.rs
backend/src/: db.rs  docker.rs  fs.rs  git.rs  handlers.rs  icon.rs  main.rs  mcp_server.rs  models.rs  onepanel.rs  state.rs
backend/src/handlers/: compose.rs  container.rs  deploy.rs  docker.rs  fs.rs  git.rs  image.rs  image_deployments.rs  mcp.rs  mod.rs  notifications.rs  repository.rs  server.rs  version.rs
backend/wix/: main.wxs  zh-CN.wxl
frontend/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/scripts/: generate-icons.js
frontend/src/: App.svelte  main.ts
frontend/src/lib/: api.ts  i18n.ts
frontend/src/lib/components/: AddDirectory.svelte  AddDirectoryDialog.svelte  AddServerDialog.svelte  ComposeContentDialog.svelte  ComposeList.svelte  ContainerList.svelte  DeployDialog.svelte  DeploymentWizard.svelte  DirectoryDetail.svelte  DirectoryList.svelte  DirectoryPicker.svelte  DockerBuildDialog.svelte  DockerConfigDialog.svelte  DockerContainers.svelte  DockerDashboard.svelte  DockerImages.svelte  ImageList.svelte  NotificationCenter.svelte  ServerCard.svelte  ServerDetail.svelte  ServerList.svelte  SettingsDialog.svelte
frontend/src/lib/components/ui/popover/: index.ts  popover-content.svelte  popover-trigger.svelte  popover.svelte
frontend/src/lib/components/ui/sonner/: sonner.svelte
frontend/src/lib/stores/: notifications.svelte.ts
frontend/src/locales/: en.json  zh-CN.json
