[package]
name = "OnePanel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.43", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.20"
utoipa = { version = "5.3", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5.0"
md5 = "0.8.0"
reqwest = { version = "0.12", default-features = false, features = ["charset", "json", "multipart", "stream", "default-tls"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
bollard = "0.18"
regex = "1.12.2"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3.31"
rust-embed = "8.5"
mime_guess = "2.0"
tray-icon = "0.19.1"
tao = { version = "0.30.8", default-features = false, features = ["rwh_05"] }
open = "5.3.1"
image = { version = "0.25.5", default-features = false, features = ["png"] }
rust-mcp-sdk = { version = "0.8", features = ["server", "macros", "hyper-server", "sse"] }
url = { version = "2", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[build-dependencies]
winres = "0.1"
